feat: add templates and bg images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
-        
+        <header>
+            <div class = "header__photo"></div>
+            <div class = "header__info"></div>
+        </header>
+        <main>
+            <div class = "steps"></div>
+            <div class = "history"></div>
+            <div class = "verify"></div>
+        </main>
+        <footer>
+            <div class = "rights"></div>
+            <div class = "form"></div>
+        </footer>
     </body>
 </html>
